Name:                zip-conduit
Version:             0.2.2.2
Synopsis:            Working with zip archives via conduits.
Description:         Working with zip archives via conduits.
License:             BSD3
License-file:        LICENSE
Author:              Tim Cherganov
Maintainer:          cherganov@gmail.com
Category:            Codec, Conduit
Homepage:            https://github.com/tymmym/zip-conduit
Bug-reports:         https://github.com/tymmym/zip-conduit/issues
Build-type:          Simple
Cabal-version:       >=1.10


Library
  Hs-source-dirs:    src

  Build-depends:
      base           >= 4.3 && < 5
    , bytestring     
    , cereal         
    , conduit        
    , digest         
    , directory      
    , filepath       
    , mtl            
    , old-time       
    , time           
    , transformers   
    , utf8-string    
    , conduit-extra  
    , resourcet      
    , primitive

  Exposed-modules:
      Codec.Archive.Zip

  Other-modules:
      Codec.Archive.Zip.Internal
      Codec.Archive.Zip.Util

  Ghc-options:       -Wall -fno-warn-unused-do-bind
  Default-language:  Haskell2010


Test-suite tests
  Type:              exitcode-stdio-1.0
  Hs-source-dirs:    tests
  Main-is:           Tests.hs

  Build-depends:
      base           
    , bytestring     
    , conduit        
    , resourcet      
    , directory      
    , filepath       
    , HUnit          
    , hpc            
    , mtl            
    , temporary      
    , test-framework 
    , test-framework-hunit 
    , time           
    , zip-conduit

  Ghc-options:       -Wall -fno-warn-unused-do-bind
  Default-language:  Haskell2010


Benchmark bench
  Type:              exitcode-stdio-1.0
  Hs-source-dirs:    bench
  Main-is:           Bench.hs

  Build-depends:
      base          
    , bytestring    
    , directory     
    , criterion     
    , filepath      
    , LibZip        
    , random        
    , temporary     
    , zip-archive   
    , zip-conduit

  Ghc-options:       -Wall -fno-warn-unused-do-bind
  Default-language:  Haskell2010


Source-repository head
  type:     git
  location: git://github.com/tymmym/zip-conduit.git
